# ComfyUI_ImageMaskPainter

./: README.md  __init__.py  mask_painter_node.py  pyproject.toml  requirements.txt
js/: mask_painter_widget.js
