[project]
name = "imagemaskpainter"
description = ""
version = "1.0.0"
license = {file = "LICENSE"} 
# classifiers = [
#     # For OS-independent nodes (works on all operating systems)
#     "Operating System :: OS Independent",
#
#     # OR for OS-specific nodes, specify the supported systems:
#     "Operating System :: Microsoft :: Windows",  # Windows specific
#     "Operating System :: POSIX :: Linux",  # Linux specific
#     "Operating System :: MacOS",  # macOS specific
#
#     # GPU Accelerator support. Pick the ones that are supported by your extension.
#     "Environment :: GPU :: NVIDIA CUDA",    # NVIDIA CUDA support
#     "Environment :: GPU :: AMD ROCm",       # AMD ROCm support
#     "Environment :: GPU :: Intel Arc",      # Intel Arc support
#     "Environment :: NPU :: Huawei Ascend",  # Huawei Ascend support
#     "Environment :: GPU :: Apple Metal",    # Apple Metal support
# ]

dependencies = ["# ComfyUI Image Mask Painter", "# no extra dependencies needed", "pillow>=10.0.0", "numpy>=1.24.0", "torch>=2.0.0"]

[project.urls]
Repository = "https://github.com/mmmmmmmmme/ComfyUI_ImageMaskPainter"
#  Used by Comfy Registry https://registry.comfy.org
Documentation = "https://github.com/mmmmmmmmme/ComfyUI_ImageMaskPainter/wiki"
"Bug Tracker" = "https://github.com/mmmmmmmmme/ComfyUI_ImageMaskPainter/issues"

[tool.comfy]
PublisherId = "mmmmmmmmm"
DisplayName = "ComfyUI_ImageMaskPainter"
Icon = ""
includes = [] 
# "requires-comfyui" = ">=1.0.0"  # ComfyUI version compatibility

